--- a/css/styles.css
+++ b/css/styles.css
@@ -115,4 +115,25 @@ h1, p {
 #sw_display {
     font-size: 32px;
     margin-bottom: 20px;
+}
+
+#calculator {
+    margin-top: 20px auto;
+  }
+  
+  #result {
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 24px;
+  }
+  
+  #buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+  }
+  
+  button {
+    padding: 10px;
+    font-size: 18px;
   }
